Feature completed: Create Brand with tests for Controller, UseCase, and Handler